# fiap-tech-challenge-01

./: .gitignore  API_reqs_Insomnia.json  Dockerfile  README.md  api_spec.yaml
.github/workflows/: docker-build-push.yml
production-app/: .gitignore  README.md  pyproject.toml
production-app/api/: .env_sample  insomnia_collection.json
production-app/api-embrapa-mle/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
production-app/api-embrapa-mle/app/: main.py
production-app/api-embrapa-mle/app/routes/: commercialization_routes.py  importation_routes.py  user_routes.py
production-app/api-embrapa-mle/app/schemas/: commercialization.py  exportation.py
production-app/api-embrapa-mle/app/services/: commercialization_service.py  importation_service.py  processing_service.py
production-app/api/app/db/: connection.py  models.py
production-app/api/app/routes/: depends.py  exportation_routes.py  processing_routes.py  (+1 more)
production-app/app/: main.py
production-app/scraping/: README.md  pyproject.toml  scraping.py
production-app/scraping-api-mle/: .dockerignore  Dockerfile  create_tables.py  docker-compose.yml  main.py
production-app/scraping-api-mle/app/: create_tables.py
production-app/scraping-api-mle/migrations/: env.py
production-app/scraping/app/db/: connection.py  models.py
production-app/scraping/app/files/: opt_04.csv
tf/: .gitignore  README.md  db_schema.tf  ecr.tf  github-oidc.tf  logs.tf  main.tf  outputs.tf  provider.tf  rds.tf  s3.tf  secretsmanager.tf  variables.tf
tf_azure/: README.md  db.tf  main.tf  network.tf  variables.tf
(+18 files in other folders)
