[tool.poetry]
name = "scraping-api-mle"
version = "0.1.0"
description = ""
authors = ["Rafaela <polizelc.rafaela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.5"
python-decouple = "^3.8"
alembic = "^1.14.0"
pandas = "^2.2.3"
selenium = "^4.27.1"
boto3 = "^1.35.99"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
